--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ confy = "0.3.1"
 serde_derive = "1.0.163"
 crossterm = "0.25"
 serde = { version = "1.0.163", features = ["derive"] }
+unicode-width = "0.1.5"
