--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde_derive = "1.0.163"
 crossterm = "0.25"
 serde = { version = "1.0.163", features = ["derive"] }
 unicode-width = "0.1.5"
+reqwest = {version = "0.11.18", features = ["blocking"]}
